<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>status_lights</name>
  <version>0.0.0</version>
  <description>Ros2 node for controlling status indicators</description>
  <maintainer email="alohia@ideaventionsacademy.org">Arya Lohia</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <exec_depend>status_lights_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
